// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Devices device 1`] = `
Object {
  "data": Object {
    "device": Object {
      "details": null,
      "errorsCount": 0,
      "firmware": "v-1",
      "id": "00000000-0000-0000-0000-000000000001",
      "lastPayload": "2022-08-30",
      "lastSeen": "2022-07-16T18:27:19Z",
      "level": 400,
      "make": "make-1",
      "message": "Tickity Boo",
      "model": "BBBB-1",
      "name": "AHU-1",
      "operational": true,
      "points": Array [
        Object {
          "id": "id-0",
          "name": "point-0",
          "state": "Applied",
          "units": "units-0",
          "value": "value-0",
        },
        Object {
          "id": "id-1",
          "name": "point-1",
          "state": "Updating",
          "units": null,
          "value": "value-1",
        },
        Object {
          "id": "id-2",
          "name": "point-2",
          "state": "Overriden",
          "units": "units-2",
          "value": "value-2",
        },
        Object {
          "id": "id-3",
          "name": "point-3",
          "state": "Invalid",
          "units": null,
          "value": "value-3",
        },
        Object {
          "id": "id-4",
          "name": "point-4",
          "state": "Failure",
          "units": "units-4",
          "value": "value-4",
        },
      ],
      "section": "SIN-MBC1",
      "serialNumber": "serialNo-1",
      "site": "LOC-1",
      "state": "ERROR",
      "tags": Array [],
      "validation": "{\\"version\\":\\"1.3.14\\",\\"timestamp\\":\\"2018-08-26T21:39:29.364Z\\",\\"sub_type\\":\\"event\\",\\"sub_folder\\":\\"discovery\\",\\"status\\":{\\"message\\":\\"Failed schema validation\\",\\"detail\\":\\"The field x.y was unexpected on line 232 of the message.\\\\nThis is by following the logic train x.y.z in the overall flow of the sytem.\\\\nRabbits are really interesting creatures and make great pets.\\\\nOh yah, and there was a missing field too.\\",\\"category\\":\\"validation.device.result\\",\\"timestamp\\":\\"2018-08-26T21:39:30.364Z\\",\\"level\\":600},\\"pointset\\":{\\"missing\\":[\\"filter_differential_pressure_setpoint\\"]},\\"errors\\":[]}",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Devices devices 1`] = `
Object {
  "data": Object {
    "devices": Object {
      "devices": Array [
        Object {
          "id": "00000000-0000-0000-0000-000000000001",
          "lastPayload": "2022-08-30",
          "make": "make-1",
          "model": "BBBB-1",
          "name": "AHU-1",
          "operational": true,
          "section": "SIN-MBC1",
          "site": "LOC-1",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000002",
          "lastPayload": "2022-08-30",
          "make": "make-2",
          "model": "BBBB-2",
          "name": "CDS-2",
          "operational": true,
          "section": "SIN-MBC2",
          "site": "SITE-2",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000003",
          "lastPayload": "2022-08-30",
          "make": "make-3",
          "model": "AAAA-3",
          "name": "AHU-3",
          "operational": false,
          "section": "SIN-MBC3",
          "site": "LOC-3",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000004",
          "lastPayload": "2022-08-30",
          "make": "make-4",
          "model": "BBBB-4",
          "name": "CDS-4",
          "operational": true,
          "section": "SIN-MBC4",
          "site": "SITE-4",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000005",
          "lastPayload": "2022-08-30",
          "make": "make-5",
          "model": "BBBB-5",
          "name": "AHU-5",
          "operational": true,
          "section": "SIN-MBC5",
          "site": "LOC-5",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000006",
          "lastPayload": "2022-08-30",
          "make": "make-6",
          "model": "AAAA-6",
          "name": "CDS-6",
          "operational": false,
          "section": "SIN-MBC6",
          "site": "SITE-6",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000007",
          "lastPayload": "2022-08-30",
          "make": "make-7",
          "model": "BBBB-7",
          "name": "AHU-7",
          "operational": true,
          "section": "SIN-MBC7",
          "site": "LOC-7",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000008",
          "lastPayload": "2022-08-30",
          "make": "make-8",
          "model": "BBBB-8",
          "name": "CDS-8",
          "operational": true,
          "section": "SIN-MBC8",
          "site": "SITE-8",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000009",
          "lastPayload": "2022-08-30",
          "make": "make-9",
          "model": "AAAA-9",
          "name": "AHU-9",
          "operational": false,
          "section": "SIN-MBC9",
          "site": "LOC-9",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000010",
          "lastPayload": "2022-08-30",
          "make": "make-10",
          "model": "BBBB-10",
          "name": "CDS-10",
          "operational": true,
          "section": "SIN-MBC10",
          "site": "SITE-10",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000011",
          "lastPayload": "2022-08-30",
          "make": "make-11",
          "model": "BBBB-11",
          "name": "AHU-11",
          "operational": true,
          "section": "SIN-MBC11",
          "site": "LOC-11",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000012",
          "lastPayload": "2022-08-30",
          "make": "make-12",
          "model": "AAAA-12",
          "name": "CDS-12",
          "operational": false,
          "section": "SIN-MBC12",
          "site": "SITE-12",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000013",
          "lastPayload": "2022-08-30",
          "make": "make-13",
          "model": "BBBB-13",
          "name": "AHU-13",
          "operational": true,
          "section": "SIN-MBC13",
          "site": "LOC-13",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000014",
          "lastPayload": "2022-08-30",
          "make": "make-14",
          "model": "BBBB-14",
          "name": "CDS-14",
          "operational": true,
          "section": "SIN-MBC14",
          "site": "SITE-14",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000015",
          "lastPayload": "2022-08-30",
          "make": "make-15",
          "model": "AAAA-15",
          "name": "AHU-15",
          "operational": false,
          "section": "SIN-MBC15",
          "site": "LOC-15",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000016",
          "lastPayload": "2022-08-30",
          "make": "make-16",
          "model": "BBBB-16",
          "name": "CDS-16",
          "operational": true,
          "section": "SIN-MBC16",
          "site": "SITE-16",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000017",
          "lastPayload": "2022-08-30",
          "make": "make-17",
          "model": "BBBB-17",
          "name": "AHU-17",
          "operational": true,
          "section": "SIN-MBC17",
          "site": "LOC-17",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000018",
          "lastPayload": "2022-08-30",
          "make": "make-18",
          "model": "AAAA-18",
          "name": "CDS-18",
          "operational": false,
          "section": "SIN-MBC18",
          "site": "SITE-18",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000019",
          "lastPayload": "2022-08-30",
          "make": "make-19",
          "model": "BBBB-19",
          "name": "AHU-19",
          "operational": true,
          "section": "SIN-MBC19",
          "site": "LOC-19",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000020",
          "lastPayload": "2022-08-30",
          "make": "make-20",
          "model": "BBBB-20",
          "name": "CDS-20",
          "operational": true,
          "section": "SIN-MBC20",
          "site": "SITE-20",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000021",
          "lastPayload": "2022-08-30",
          "make": "make-21",
          "model": "AAAA-21",
          "name": "AHU-21",
          "operational": false,
          "section": "SIN-MBC21",
          "site": "LOC-21",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000022",
          "lastPayload": "2022-08-30",
          "make": "make-22",
          "model": "BBBB-22",
          "name": "CDS-22",
          "operational": true,
          "section": "SIN-MBC22",
          "site": "SITE-22",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000023",
          "lastPayload": "2022-08-30",
          "make": "make-23",
          "model": "BBBB-23",
          "name": "AHU-23",
          "operational": true,
          "section": "SIN-MBC23",
          "site": "LOC-23",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000024",
          "lastPayload": "2022-08-30",
          "make": "make-24",
          "model": "AAAA-24",
          "name": "CDS-24",
          "operational": false,
          "section": "SIN-MBC24",
          "site": "SITE-24",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000025",
          "lastPayload": "2022-08-30",
          "make": "make-25",
          "model": "BBBB-25",
          "name": "AHU-25",
          "operational": true,
          "section": "SIN-MBC25",
          "site": "LOC-25",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000026",
          "lastPayload": "2022-08-30",
          "make": "make-26",
          "model": "BBBB-26",
          "name": "CDS-26",
          "operational": true,
          "section": "SIN-MBC26",
          "site": "SITE-26",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000027",
          "lastPayload": "2022-08-30",
          "make": "make-27",
          "model": "AAAA-27",
          "name": "AHU-27",
          "operational": false,
          "section": "SIN-MBC27",
          "site": "LOC-27",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000028",
          "lastPayload": "2022-08-30",
          "make": "make-28",
          "model": "BBBB-28",
          "name": "CDS-28",
          "operational": true,
          "section": "SIN-MBC28",
          "site": "SITE-28",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000029",
          "lastPayload": "2022-08-30",
          "make": "make-29",
          "model": "BBBB-29",
          "name": "AHU-29",
          "operational": true,
          "section": "SIN-MBC29",
          "site": "LOC-29",
          "tags": Array [],
        },
        Object {
          "id": "00000000-0000-0000-0000-000000000030",
          "lastPayload": "2022-08-30",
          "make": "make-30",
          "model": "AAAA-30",
          "name": "CDS-30",
          "operational": false,
          "section": "SIN-MBC30",
          "site": "SITE-30",
          "tags": Array [],
        },
      ],
      "totalCount": 30,
      "totalFilteredCount": 10,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Devices getDeviceMakes 1`] = `
Object {
  "data": Object {
    "deviceMakes": Array [
      "make-1",
      "make-10",
      "make-2",
      "make-3",
      "make-4",
      "make-5",
      "make-6",
      "make-7",
      "make-8",
      "make-9",
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Devices getDeviceModels 1`] = `
Object {
  "data": Object {
    "deviceModels": Array [
      "AAAA-3",
      "AAAA-6",
      "AAAA-9",
      "BBBB-1",
      "BBBB-10",
      "BBBB-2",
      "BBBB-4",
      "BBBB-5",
      "BBBB-7",
      "BBBB-8",
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Devices getDeviceNames 1`] = `
Object {
  "data": Object {
    "deviceNames": Array [
      "AHU-1",
      "AHU-3",
      "AHU-5",
      "AHU-7",
      "AHU-9",
      "CDS-10",
      "CDS-2",
      "CDS-4",
      "CDS-6",
      "CDS-8",
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Devices getSections 1`] = `
Object {
  "data": Object {
    "sections": Array [
      "SIN-MBC1",
      "SIN-MBC10",
      "SIN-MBC2",
      "SIN-MBC3",
      "SIN-MBC4",
      "SIN-MBC5",
      "SIN-MBC6",
      "SIN-MBC7",
      "SIN-MBC8",
      "SIN-MBC9",
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Devices points 1`] = `
Object {
  "data": Object {
    "points": Array [
      Object {
        "id": "id-0",
        "name": "point-0",
        "state": "Applied",
        "units": "units-0",
        "value": "value-0",
      },
      Object {
        "id": "id-1",
        "name": "point-1",
        "state": "Updating",
        "units": null,
        "value": "value-1",
      },
      Object {
        "id": "id-2",
        "name": "point-2",
        "state": "Overriden",
        "units": "units-2",
        "value": "value-2",
      },
      Object {
        "id": "id-3",
        "name": "point-3",
        "state": "Invalid",
        "units": null,
        "value": "value-3",
      },
      Object {
        "id": "id-4",
        "name": "point-4",
        "state": "Failure",
        "units": "units-4",
        "value": "value-4",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
